HHH-15670 Implement RequiresDialectFeature.reverse()
- implement RequiresDialectFeature.reverse()
- remove not-feature checks to reverse = true